// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordInput /> when visibility is not toggled renders correctly 1`] = `
.emotion-3 {
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-3:focus {
  border-color: #8DE2E0;
}

.emotion-3:disabled {
  cursor: not-allowed;
  color: #666666;
  background-color: #F4F5F6;
}

.emotion-3::-webkit-input-placeholder {
  color: #666666;
}

.emotion-3::-moz-placeholder {
  color: #666666;
}

.emotion-3:-ms-input-placeholder {
  color: #666666;
}

.emotion-3::placeholder {
  color: #666666;
}

.emotion-3::-ms-clear {
  display: none;
}

.emotion-16 {
  position: relative;
}

.emotion-1 {
  margin-bottom: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  background-color: white;
  color: greys.charcoal;
  font-size: base;
  line-height: normal;
  text-align: left;
  border: 2px;
  border-color: greys.alto;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color;
  transition: border-color;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1:focus {
  border-color: #8DE2E0;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: #666666;
  background-color: #F4F5F6;
}

.emotion-1::-webkit-input-placeholder {
  color: #666666;
}

.emotion-1::-moz-placeholder {
  color: #666666;
}

.emotion-1:-ms-input-placeholder {
  color: #666666;
}

.emotion-1::placeholder {
  color: #666666;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-14 {
  border: none;
  width: auto;
  overflow: visible;
  font: inherit;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  padding: 0;
  margin: 0;
  background-color: transparent;
  color: inherit;
  position: absolute;
  height: 100%;
  top: 0;
  left: calc(100% - 5rem);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14:disabled {
  cursor: not-allowed;
}

.emotion-14:hover:disabled {
  background-color: transparent;
  color: inherit;
}

.emotion-14:focus {
  outline: none;
}

.emotion-8 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

.emotion-6 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

<PasswordInput
  pr="5.625rem"
>
  <Base
    className="emotion-3 emotion-0"
  >
    <Wrapper>
      <div
        className="emotion-16 emotion-17"
      >
        <PasswordInput__Input
          bg="white"
          border={2}
          borderColor="greys.alto"
          className="emotion-3 emotion-0"
          color="greys.charcoal"
          fontSize="base"
          lineHeight="normal"
          mb={3}
          px={4}
          py={3}
          textAlign="left"
          type="password"
        >
          <input
            className="emotion-0 emotion-1 emotion-2"
            type="password"
          />
        </PasswordInput__Input>
        <PasswordInput__Toggle
          as="button"
          bg="transparent"
          color="inherit"
          m={0}
          onClick={[Function]}
          p={0}
          type="button"
        >
          <button
            className="emotion-14 emotion-15"
            color="inherit"
            onClick={[Function]}
            type="button"
          >
            <Icon
              mr={2}
              name="visibility"
              size={22}
              title={null}
            >
              <WithTheme(Component)
                className="emotion-8 emotion-5"
                mr={2}
                name="visibility"
                size={22}
                title={null}
              >
                <Component
                  className="emotion-8 emotion-5"
                  mr={2}
                  name="visibility"
                  size={22}
                  title={null}
                >
                  <StyledSvg
                    className="emotion-8 emotion-5"
                    fill="currentcolor"
                    height={22}
                    mr={2}
                    title="visibility"
                    viewBox="0 0 24 24"
                    width={22}
                  >
                    <svg
                      className="emotion-5 emotion-6 emotion-7"
                      fill="currentcolor"
                      height={22}
                      title="visibility"
                      viewBox="0 0 24 24"
                      width={22}
                    >
                      <path
                        d={null}
                      />
                    </svg>
                  </StyledSvg>
                </Component>
              </WithTheme(Component)>
            </Icon>
            Show
          </button>
        </PasswordInput__Toggle>
      </div>
    </Wrapper>
  </Base>
</PasswordInput>
`;

exports[`<PasswordInput /> when visibility is toggled renders correctly 1`] = `
.emotion-3 {
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-3:focus {
  border-color: #8DE2E0;
}

.emotion-3:disabled {
  cursor: not-allowed;
  color: #666666;
  background-color: #F4F5F6;
}

.emotion-3::-webkit-input-placeholder {
  color: #666666;
}

.emotion-3::-moz-placeholder {
  color: #666666;
}

.emotion-3:-ms-input-placeholder {
  color: #666666;
}

.emotion-3::placeholder {
  color: #666666;
}

.emotion-3::-ms-clear {
  display: none;
}

.emotion-16 {
  position: relative;
}

.emotion-1 {
  margin-bottom: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  background-color: white;
  color: greys.charcoal;
  font-size: base;
  line-height: normal;
  text-align: left;
  border: 2px;
  border-color: greys.alto;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color;
  transition: border-color;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1:focus {
  border-color: #8DE2E0;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: #666666;
  background-color: #F4F5F6;
}

.emotion-1::-webkit-input-placeholder {
  color: #666666;
}

.emotion-1::-moz-placeholder {
  color: #666666;
}

.emotion-1:-ms-input-placeholder {
  color: #666666;
}

.emotion-1::placeholder {
  color: #666666;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-14 {
  border: none;
  width: auto;
  overflow: visible;
  font: inherit;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  padding: 0;
  margin: 0;
  background-color: transparent;
  color: inherit;
  position: absolute;
  height: 100%;
  top: 0;
  left: calc(100% - 5rem);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14:disabled {
  cursor: not-allowed;
}

.emotion-14:hover:disabled {
  background-color: transparent;
  color: inherit;
}

.emotion-14:focus {
  outline: none;
}

.emotion-8 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

.emotion-6 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

<PasswordInput
  pr="5.625rem"
>
  <Base
    className="emotion-3 emotion-0"
  >
    <Wrapper>
      <div
        className="emotion-16 emotion-17"
      >
        <PasswordInput__Input
          bg="white"
          border={2}
          borderColor="greys.alto"
          className="emotion-3 emotion-0"
          color="greys.charcoal"
          fontSize="base"
          lineHeight="normal"
          mb={3}
          px={4}
          py={3}
          textAlign="left"
          type="text"
        >
          <input
            className="emotion-0 emotion-1 emotion-2"
            type="text"
          />
        </PasswordInput__Input>
        <PasswordInput__Toggle
          as="button"
          bg="transparent"
          color="inherit"
          m={0}
          onClick={[Function]}
          p={0}
          type="button"
        >
          <button
            className="emotion-14 emotion-15"
            color="inherit"
            onClick={[Function]}
            type="button"
          >
            <Icon
              mr={2}
              name="visibilityOff"
              size={22}
              title={null}
            >
              <WithTheme(Component)
                className="emotion-8 emotion-5"
                mr={2}
                name="visibilityOff"
                size={22}
                title={null}
              >
                <Component
                  className="emotion-8 emotion-5"
                  mr={2}
                  name="visibilityOff"
                  size={22}
                  title={null}
                >
                  <StyledSvg
                    className="emotion-8 emotion-5"
                    fill="currentcolor"
                    height={22}
                    mr={2}
                    title="visibilityOff"
                    viewBox="0 0 24 24"
                    width={22}
                  >
                    <svg
                      className="emotion-5 emotion-6 emotion-7"
                      fill="currentcolor"
                      height={22}
                      title="visibilityOff"
                      viewBox="0 0 24 24"
                      width={22}
                    >
                      <path
                        d={null}
                      />
                    </svg>
                  </StyledSvg>
                </Component>
              </WithTheme(Component)>
            </Icon>
            Hide
          </button>
        </PasswordInput__Toggle>
      </div>
    </Wrapper>
  </Base>
</PasswordInput>
`;
